# car

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  Trunk.toml  carp.sql  docker-compose.yml
.github/workflows/: master.yml  pull_request.yml  staging.yml  tag.yml
deploy/: Dockerfile  kubernetes.yaml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs  model.rs
frontend/src/pages/: home.rs  mod.rs  not_found.rs
frontend/src/pages/address/: detail.rs  list.rs  mod.rs
frontend/src/pages/analysis/: directions.rs  mod.rs  relations.rs
frontend/src/pages/chain/: detail.rs  list.rs
frontend/src/pages/list/: detail.rs  list.rs  mod.rs
frontend/src/pages/service/: detail.rs  list.rs  mod.rs
frontend/src/pages/tag/: detail.rs  list.rs  mod.rs
frontend/src/request/: address.rs  analysis.rs  chain.rs  mod.rs  service.rs  tag.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221201_160944_create_tables.rs
scripts/: albi.py  dapps.json  pg.py  scan.py
scripts/lama/: create_taks.py  example.yaml
shared/: Cargo.toml
shared/src/: address.rs  lib.rs
src/: common.rs  main.rs  type.rs
src/entity/: address.rs  chain.rs  mod.rs  prelude.rs  service.rs  tag.rs  transaction.rs
src/feed/: anyscan.rs  cardano.rs  mod.rs
src/server/: address.rs  analysis.rs  chain.rs  mod.rs  service.rs  tag.rs  transaction.rs  transform.rs
src/service/: common.rs  dex.rs  mod.rs  wingriders.rs
src/tag/: mod.rs
