[package]
name = "car"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[workspace]
members = [".", "frontend", "migration", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Martin Miksanik <martin.miksanik@vacuumlabs.com>",
    "Samuel Šulovský <samuel.sulovsky@vacuumlabs.com>"
]

[workspace.dependencies]
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.93"
tracing-subscriber = "0.3.9"
tracing = "0.1.31"
hex = "0.4.3"
uuid = { version = "1.3.0", features = ["serde"] }
rweb = { version = "0.6", features = ["openapi"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24"

# cardano
pallas-addresses = "0.15.0"

[dependencies]
async-trait = "0.1.59"
hex = { workspace = true }
pallas-addresses = { workspace = true }
rweb = { workspace = true }
sea-orm = { version = "0.10.4", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array", "with-json"] }
sea-query = { version = "0.27.2", features = [ "postgres-array", "with-json"] }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "shared", features = ["schema"] }
tokio = { version = "1.16.1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }