[package]
name = "frontend"
version = "0.1.0"
authors = ["Martin Miksanik <martin.miksanik@vacuumlabs.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.9.2"
serde = "1.0.137"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
indexmap = { version = "1.9.0", features = ["serde-1"] }
enclose = "1.1.8"
