[package]
name = "frontend"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
enclose = "1.1.8"
indexmap = { version = "1.9.0", features = ["serde-1"] }

seed = "0.9.2"
serde = { workspace = true }
shared = { path = "../shared" }
uuid = { workspace = true }



